# Audit-and-Integrity

./: README.md  insert_performance_report.csv  insert_performance_summary.json  search_performance_report.csv  search_performance_summary.json
Storage-node/: CMakeLists.txt  Old_modify-storage.md  README.md  filesreadme.md  insert.json  main.cpp  modify-storage.md  modify.md  public_params.json  storage_node.cpp  storage_node.cpp:Zone.Identifier  storage_node.h  technology.md  修改意见.txt
Storage-node/data/: config.json  index_db.json  node_info.json  public_params.json  search_db.json
Storage-node/old/: main.cpp
Storage-node/test/: add_test  add_test.cpp  debug_output.txt  different_types  different_types.cpp  fileproof_test.cpp  standParing  standParing.cpp  test  test.cpp  test1  test1.cpp  test2  test2.cpp  test_b_p  test_b_p.cpp  test_file_proof  test_file_proof.cpp  test_pairing  test_pairing.cpp
chain/: genesis.json
contracts/: README.md  key.txt  (+3 more)
vds-client/: CMakeLists.txt  client-modify-suggestions.md  client.cpp  client.h  main.cpp  params.md  public_params.json  readme.md
vds-client/data/: keys  keyword_states.json  public_params.json  system_params.json
vds-client/data/EncFiles/: _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1_2000_conference_1..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1_2000_conference_2..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1_2000_conference_3..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_1..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_10..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_100..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_101..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_103..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_104..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_105..enc  _home_zsw_codes_Audit_TEST_gpt_test_Audit-and-Integrity_make_data_database1__sent_mail_11..enc  (+2461 more)
(+11045 files in other folders)
